--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -46,5 +46,12 @@ services:
       - prometheus
     restart: always
 
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 80:80
+
 volumes:
   grafana-data:
