--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,6 +19,8 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-22.04
+    env:
+      LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
 
     steps:
     - uses: actions/checkout@v4
