--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,6 +19,13 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-22.04
+    services:
+      db:
+        image: postgres:latest
+        ports: ['5432:5432']
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     env:
       LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
 
