--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           source: "release.tar.gz"
-          target: "${{ env.DEPLOY_PATH }}/release.tar.gz"
+          target: "${{ env.DEPLOY_PATH }}"
 
       # 4. Развёртывание и запуск на сервере
       - name: Deploy and restart service
