--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       MIX_ENV: prod                   # Режим сборки - продакшн
-      DEPLOY_PATH: /opt/llm_nicknames/releases         # Путь на сервере для деплоя
+      DEPLOY_PATH: /shared_folder/release        # Путь на сервере для деплоя
       SERVICE_NAME: llm_nicknames.service     # Имя systemd-сервиса
       LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
     steps:
@@ -51,6 +51,8 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          tar_tmp_path: "/temp_actions"
           source: "release.tar.gz"
           target: "${{ env.DEPLOY_PATH }}"
 
