--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "mix.exs"
+          source: "release.tar.gz"
           target: "${{ env.DEPLOY_PATH }}"
 
       # 4. Развёртывание и запуск на сервере
