--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build and digest assets
         run: mix assets.deploy
 
+      - name: Build phoenix release
+        run: mix phx.gen.release
+
       - name: Build release
         run: mix release --overwrite
 
