--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       MIX_ENV: prod                   # Режим сборки - продакшн
-      DEPLOY_PATH: /opt/llm_nicknames        # Путь на сервере для деплоя
+      DEPLOY_PATH: /opt/llm_nicknames/releases        # Путь на сервере для деплоя
       SERVICE_NAME: llm_nicknames.service     # Имя systemd-сервиса
       LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
     steps:
@@ -46,6 +46,11 @@ jobs:
       - name: Add server to known_hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
+      # --- Получаем версию из mix.exs ---
+      - name: Extract version from mix.exs
+        id: version
+        run: echo "VERSION=$(mix run -e 'IO.puts(Mix.Project.config()[:version])')" >> $GITHUB_ENV
+
       # 3. Копирование релиза на сервер
       - name: Pack release for deploy
         run: tar -czf release.tar.gz -C _build/prod/rel/ life_complex
@@ -56,7 +61,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           source: "release.tar.gz"
-          target: "${{ env.DEPLOY_PATH }}"
+          target: "${{ env.DEPLOY_PATH }}/%{{ env.VERSION }}"
 
       # 4. Развёртывание и запуск на сервере
       - name: Deploy and restart service
