--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-22.04
+    services:
+      db:
+        image: postgres:17.4
+        ports: ['5432:5432']
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     env:
       MIX_ENV: prod                   # Режим сборки - продакшн
       DEPLOY_PATH: /opt/llm_nicknames/releases        # Путь на сервере для деплоя
