--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     env:
       MIX_ENV: prod                   # Режим сборки - продакшн
-      DEPLOY_PATH: /opt/llm_nicknames/releases        # Путь на сервере для деплоя
-      SERVICE_NAME: llm_nicknames.service     # Имя systemd-сервиса
+      DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}        # Путь на сервере для деплоя
+      SERVICE_NAME: ${{ secrets.SERVICE_NAME }}     # Имя systemd-сервиса
       LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
       SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -82,7 +82,7 @@ jobs:
           script: |                        # Многострочный скрипт на удалённом сервере
             set -e                         # завершать при ошибках
             echo "Stopping old service (if running)"
-            sudo systemctl stop ${{ env.SERVICE_NAME }} || true
+            systemctl stop ${{ env.SERVICE_NAME }} || true
 
             echo "Deploying new release to ${DEPLOY_PATH}"
             sudo rm -rf ${{ env.DEPLOY_PATH }}/*       # очистка старых файлов
@@ -98,7 +98,3 @@ jobs:
 
             echo "Checking service status"
             sudo systemctl is-active --quiet ${{ env.SERVICE_NAME }} && echo "✅ Deploy succeeded: service is active." || (echo "❌ Service failed to start!" && sudo systemctl status ${{ env.SERVICE_NAME }} --no-pager && exit 1)
-        env:
-          # Передаем секреты в среду исполнения скрипта
-          SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
