--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,3 +98,7 @@ jobs:
 
             echo "Checking service status"
             sudo systemctl is-active --quiet ${{ env.SERVICE_NAME }} && echo "✅ Deploy succeeded: service is active." || (echo "❌ Service failed to start!" && sudo systemctl status ${{ env.SERVICE_NAME }} --no-pager && exit 1)
+        env:
+          # Передаем секреты в среду исполнения скрипта
+          SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
