--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-22.04
     services:
-      db:
+      postgres:
         image: postgres:17.4
         ports: ['5432:5432']
         env:
@@ -19,7 +19,6 @@ jobs:
       DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}        # Путь на сервере для деплоя
       SERVICE_NAME: ${{ secrets.SERVICE_NAME }}     # Имя systemd-сервиса
       LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
-      SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
       DATABASE_URL: ecto://postgres:postgres@host.docker.internal:5432/life_complex_dev
     steps:
       # 1. Сборка проекта
