--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     services:
       db:
-        image: postgres:17.4
+        image: postgres:latest
         ports: ['5432:5432']
         env:
           POSTGRES_PASSWORD: postgres
@@ -20,7 +20,7 @@ jobs:
       SERVICE_NAME: ${{ secrets.SERVICE_NAME }}     # Имя systemd-сервиса
       LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
       SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
-      DATABASE_URL: ecto://postgres:postgres@db:5432/life_complex_dev
+      DATABASE_URL: ecto://postgres:postgres@db:5432/life_complex
     steps:
       # 1. Сборка проекта
       - name: Checkout code
