--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
         ports: ['5432:5432']
         env:
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
